add: QR code generation for lots
