# docs/swagger.yaml
@@ -509,6 +509,40 @@ paths:
       summary: Create a new lot
       tags:
       - lots-staff
+  /staff/lots/{id}/qr:
+    get:
+      description: Generates and returns a PNG image of a QR code containing the Lot
+        ID.
+      parameters:
+      - description: Lot ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - image/png
+      responses:
+        "200":
+          description: PNG Image
+          schema:
+            type: file
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - RoleAuth: []
+      summary: Get Lot QR Code
+      tags:
+      - lots-admin
   /staff/orders:
     post:
       consumes:
